# ce3k

./: README.md  pyproject.toml
examples/: demo_est.py  demo_simulation.py  plot_trajectory_of_targets.py
notebooks/: demo_est.ipynb
paper/: main.typ  refs.bib
progress-reports/: bigSigma.bib  bigSigma_AH_September2024.typ  drdcMeetingNotes_AH_September2024.typ  progressReport_AH_September2024.typ
src/ce3k/: __init__.py  constants.py  environment.py  registration.py
