[project]
name = "ce3k"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnax>=0.0.8",
    "ipykernel>=6.29.5",
    "jax>=0.4.35",
    "matplotlib>=3.9.2",
]

[project.scripts]
hello = "ce3k:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
